--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,25 @@ ol, ul {
   padding-left: 30px;
 }
 
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
 .status {
   margin-bottom: 10px;
+}
+
+.bundesliga-header {
+  font-size: 28px;
+  color: red;
+}
+
+.bundesliga-day-select
+{
+  font-size: 24px;
+  color: blue;
+}
+
+.bundesliga-day-results
+{
+  font-size: 20px;
+  color: black;  
 }
 
 .square {
@@ -32,19 +43,8 @@ ol, ul {
   width: 34px;
 }
 
-.square:focus {
-  outline: none;
-}
-
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-
-.game {
-  display: flex;
-  flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
 }
